--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,9 @@ a.active hr{
 *{
   font-family: Outfit;
 }
+::-webkit-scrollbar{
+  display: none;
+}
 
 .prata-regular {
   font-family: "Prata", serif;
